# Watchque

./: .gitignore  Main.hs  Makefile  README.txt  Watchque.cabal  sources.txt  watchque.cabal
examples/: simple.hs
scope/: watchque-hs.don
src/System/: Watchque.hs
src/System/Watchque/: Cli.hs  Exception.hs  Include.hs  Internal.hs  Local.hs  Resque.hs  Run.hs
