name:                Watchque
version:             0.1.0.0
synopsis:            Create resque jobs from inotify file & directory events
homepage:            https://github.com/adarqui/watchque-hs
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     System.Watchque
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*, hedis ==0.6.5, hinotify ==0.3.7, regex-compat, bytestring, transformers ==0.3.0.*, directory ==1.2.1.*, devutils
  GHC-Options:         -O3 -Wall -threaded -rtsopts
  hs-source-dirs:      src

executable "watchque-hs"
  main-is:             Main.hs
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*, hedis ==0.6.5, hinotify ==0.3.7, regex-compat, Watchque, bytestring, transformers ==0.3.0.*, directory ==1.2.1.*, process ==1.2.0.*, devutils
  GHC-Options:         -O3 -Wall -threaded -rtsopts
